<resources>
    <string name="app_name">SportBook</string>

    <string name="week">Week</string>
    <string name="calendar">Calendar</string>
    <string name="exercises">Exercises</string>
    <string name="profile">Profile</string>
    <string name="createTrain">createTrain</string>
    <string name="saveTrain">saveTrain</string>
    <string name="write_workout">Write your workout…</string>
    <string name="save">Save</string>
    <string name="choose_date">Choose the date</string>
    <string name="title">Title</string>
    <string name="pin">Pin/Unpin</string>
    <string name="delete">Delete</string>
</resources>